syntax = "proto3";
package jobManage;
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service jobManageService {
    rpc createGroup (CreateGroupRequest) returns (google.protobuf.Empty);
    rpc createUser (CreateUserRequest) returns (CreateUserResponse);
    rpc loginUser (LoginUserRequest) returns (LoginUserResponse);
    rpc createShift (CreateShiftRequest) returns (google.protobuf.Empty);
    rpc getAllGroup (google.protobuf.Empty) returns (GetAllGroupResponse);
}

message CreateGroupRequest {
    string email = 1;
    string group_name = 2;
}

enum Permission {
    USER = 0;
    ADMIN = 1;
}

message CreateUserRequest {
    string user_name = 1;
    string email = 2;
    string password = 3;
    int32 group_id = 4;
    Permission permission = 5;
}

message CreateUserResponse {
    string token = 1;
}

message LoginUserRequest {
    string email = 1;
    string password = 2;
}

message LoginUserResponse {
    string token = 1;
}

message Date {
    int32 year = 1;
    int32 month = 2;
    int32 day = 3;
}
message Time {
    int32 hour = 1;
    int32 minute = 2;
}
message Shift {
    Date date = 1;
    Time start = 2;
    Time end = 3;
}

message CreateShiftRequest {
    repeated Shift shifts = 1;
}

message Group{
    string group_name = 1;
    int32 group_id = 2;
}

message GetAllGroupResponse {
    repeated Group groups = 1;
}
